hphp/hack/test/typecheck/ltgt.php.exp
File "ltgt.php", line 4, characters 13-13:
An expression is expected here. (Parsing[1002])
